k8s/staging/compras-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compras-dpl
---
apiVersion: v1
kind: Service
metadata:
  name: compras-svc
