k8s/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myerp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: myerp.dev
      http:
        paths:
          - path: /stg/api/compras(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: stg-compras-svc
                port:
                  number: 80
          - path: /stg/api/inventario(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: stg-inventario-svc
                port:
                  number: 80
